# pyxrate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test-check.yml
currency_exchange/: README.md  converter.py  data.py  exceptions.py  logger.py
tests/: test_currency_converter.py
